[package]
name = "pandacoin"
version = "0.1.0"
edition = "2021"
authors = [
    "Clayton Rabenda <claytonrabenda@gmail.com>",
]
default-run = "pandacoin"

[[bin]]
name = "build_protos"
path = "build_protos.rs"
required-features = ["build_deps"]  # only needed for build-dependencies

[dependencies]
aes = "0.7.4"
async-recursion = "0.3.2"
async-std = "1.10.0"
async-trait = "0.1.51"
base58 = "0.1.0"
# bincode = "1.3"
blake3 = { version = "0.3.8", features = ["rayon"] }
config = "0.11"
block-modes = "0.8.1"
# chrono = "0.4"
clap = "3.0.0-beta.2"
dashmap = "4.0.2"
futures = { version = "0.3.18", features = ["std"] }
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
prost = "0.8"
prost-build = { version = "0.8", optional = true } # optional for the build_protos bin target
# Only necessary if using Protobuf well-known types:
prost-types = "0.8"
# rand = "0.8.3"
rayon = "1.5"
rpassword = "5.0"
# secp256k1 = { version = "0.20.2", features = ["global-context"] }

secp256k1 = { version = "0.20.3", features = ["global-context"] }
sha2 = "0.10.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
# warp = "0.3"

[dev-dependencies]
ctor = "0.1.21"
env_logger = "0.9.0"

[build-dependencies]
prost-build = { version = "0.8" }

[features]
test-utilities = []
build_deps = ["prost-build"]